How to validate OpenAPI spec
Also fix a few errors, one type of error left (and warnings)

    $ spectral lint -D -s operation-operationId-unique openapi/openapi.yaml
    OpenAPI 3.x detected
    No results with a severity of 'error' or higher found!
